# ai-test

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  reports.db
.github/workflows/: canary.yml  ci.yml
docs/: architecture.md  observability.md  requirements_coverage.md
scripts/: init_data.py  promote_trios.py
src/agent/: graph.py  nodes.py  state.py
src/config/: persona.yaml  settings.py
src/db/: bq_client.py
src/memory/: golden_bucket.py  reports_store.py  seed_trios.py  user_prefs.py
src/observability/: __init__.py  logger.py  metrics.py  progress.py
src/oversight/: confirmation_flow.py
src/resilience/: quota_check.py  quota_guard.py  retry.py  sql_self_correct.py
src/safety/: intent_guard.py  pii_masker.py
src/safety/config/: persona.yaml  settings.py
src/safety/db/: bq_client.py
src/safety/memory/: seed_trios.py  user_prefs.py
src/safety/observability/: logger.py
src/safety/oversight/: confirmation_flow.py
src/safety/resilience/: retry.py  sql_self_correct.py
src/tools/: golden_bucket_tool.py  query_tool.py  reports_tool.py  schema_tool.py
tests/: test_qa_evals.py
tests/canary/: test_canary_smoke.py
tests/integration/: test_agent_graph.py
tests/unit/: test_confirmation_flow.py  test_pii_masker.py  test_query_tool.py  test_sql_self_correct.py
